removed images from options until I can utilize fontAwesome

--- a/chrome/content/options.css
+++ b/chrome/content/options.css
@@ -1,4 +1,4 @@
-#colorimg {
+/*#colorimg {
     list-style-image: url("chrome://tabby/content/assets/colorIcons/twit.png");
     max-width: 64px;
     max-height: 64px;
@@ -18,5 +18,5 @@
     max-height: 64px;
     min-width: 64px;
     min-height: 64px;
-}
+}*/
 
